--- a/assets/sass/import-maps/content-modules-map.scss
+++ b/assets/sass/import-maps/content-modules-map.scss
@@ -1,10 +1,10 @@
 // generated with grunt-sass-globbing
 
-@import "../04-content-modules\alerts";
-@import "../04-content-modules\download-links";
-@import "../04-content-modules\forms";
-@import "../04-content-modules\lightbox";
-@import "../04-content-modules\listings";
-@import "../04-content-modules\other";
-@import "../04-content-modules\rotator";
-@import "../04-content-modules\tooltip";
+@import "../04-content-modules/alerts";
+@import "../04-content-modules/download-links";
+@import "../04-content-modules/forms";
+@import "../04-content-modules/lightbox";
+@import "../04-content-modules/listings";
+@import "../04-content-modules/other";
+@import "../04-content-modules/rotator";
+@import "../04-content-modules/tooltip";
