--- a/assets/sass/01-import-styles.scss
+++ b/assets/sass/01-import-styles.scss
@@ -11,44 +11,25 @@
 @import "00-import-functions.scss";
 
 //any plugin style css gets loaded here (css you aren't meant to edit)
-//@import "import-maps/plugins-map.scss"; //for when the grunt bug is fixed
-@import "plugins/jquery.custombox.scss"; // jQuery Custombox v1.1.3
-@import "plugins/normalize.scss"; // css reset file
+@import "import-maps/plugins-map.scss";
 
 //Styles that are essentially resets and tools to help make developing easier
 //order is important, use numbers on files, forms-base must be last.
-//@import "import-maps/base-map.scss"; //for when the grunt bug is fixed
-@import "02-base/00-elements.scss";//must be first
-@import "02-base/01-tools.scss";
-@import "02-base/02-buttons.scss";
-@import "02-base/03-columns.scss";
-@import "02-base/forms-base.scss";//must be last, don't bother with number
+@import "import-maps/base-map.scss";
 
 //Holds rules for modules that are visible on essentially every page (header, footer, etc.)
 //These are essentially modules OUTSIDE the main content area
 //order shouldn't be very important as long as they are self contained
-//@import "import-maps/global-modules-map.scss"; //for when the grunt bug is fixed
-@import "03-global-modules/header.scss";
-@import "03-global-modules/nav-primary.scss";
-@import "03-global-modules/sidebar.scss";
-@import "03-global-modules/footer.scss";
+@import "import-maps/global-modules-map.scss";
 
 //Holds rules for modules that are only visible on certain pages or under certain circumstances
 //These are essentially modules INSIDE the main content area
 //order shouldn't be very important as long as they are self contained
-//@import "import-maps/content-modules-map.scss"; //for when the grunt bug is fixed
-@import "04-content-modules/alerts.scss";
-@import "04-content-modules/download-links.scss";
-@import "04-content-modules/forms.scss";
-@import "04-content-modules/lightbox.scss";
-@import "04-content-modules/listings.scss";
-@import "04-content-modules/rotator.scss";
-@import "04-content-modules/tooltip.scss";
-@import "04-content-modules/other.scss";
+@import "import-maps/content-modules-map.scss";
 
 //Holds the animation stages for elements that are animated using the .addStages() javascript function
 //order shouldn't be important
-//@import "import-maps/animation-map.scss"; //for when the grunt bug is fixed
+@import "import-maps/animation-map.scss";
 
 //Remove this when starting a new project
 @import "swordion-only.scss";
