Adjusting base font attributes
The base font was too small and it looked like google fonts wasn't
working

--- a/assets/css/media-merge/style.css
+++ b/assets/css/media-merge/style.css
@@ -330,8 +330,9 @@ html {
 }
 
 body {
-	font-size: 13px;
-	font-size: 1.3rem;
+	font-size: 16px;
+	font-size: 1.6rem;
+	font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 h1:first-child,
