--- a/assets/css/media-merge/style-lt-ie9.css
+++ b/assets/css/media-merge/style-lt-ie9.css
@@ -267,7 +267,8 @@ html {
 }
 
 body {
-	font-size: 13px;
+	font-size: 16px;
+	font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 h1:first-child,
