--- a/assets/css/style-lt-ie9.css
+++ b/assets/css/style-lt-ie9.css
@@ -96,7 +96,7 @@ nav ul, .columns { margin: 0; padding: 0; list-style: none; }
 
 html { font-size: 62.5%; }
 
-body { font-size: 13px; }
+body { font-size: 16px; font-family: "Roboto", Arial, Helvetica, sans-serif; }
 
 h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child, p:first-child, ul:first-child, ol:first-child, li:first-child { margin-top: 0; }
 
