--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,7 +156,7 @@ nav ul, .columns { margin: 0; padding: 0; list-style: none; }
 
 html { font-size: 62.5%; }
 
-body { font-size: 13px; font-size: 1.3rem; }
+body { font-size: 16px; font-size: 1.6rem; font-family: "Roboto", Arial, Helvetica, sans-serif; }
 
 h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child, p:first-child, ul:first-child, ol:first-child, li:first-child { margin-top: 0; }
 
