--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,29 +5,37 @@
 //	This is the file that compiles the css for
 //	modern browsers
 \*================================================*/
+/*
+SCSS variables are information about icon's compiled state, stored under its original file name
+
+.icon-home { width: map-get($icon-home, 'width');
+}
+
+At the bottom of this section, we provide information about the spritesheet itself
+*/
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 @font-face { font-family: 'icons'; src: url("fonts/icons.eot?-nx4lre"); src: url("fonts/icons.eot?#iefix-nx4lre") format("embedded-opentype"), url("fonts/icons.woff?-nx4lre") format("woff"), url("fonts/icons.ttf?-nx4lre") format("truetype"), url("fonts/icons.svg?-nx4lre#icons") format("svg"); font-weight: normal; font-style: normal; }
 /*
 @font-face { font-family: 'xxxxxxxxxxxxxx'; src: url('fonts/xxxxxxxxxxxxxx.eot'); src: local('Ôÿ║'), url('fonts/xxxxxxxxxxxxxx.woff') format('woff'), url('fonts/xxxxxxxxxxxxxx.ttf') format('truetype'), url('fonts/xxxxxxxxxxxxxx.svg#light') format('svg'); font-weight: normal; font-style: normal;
 }
 */
-.icon-pdf { content: ""; }
+.icon-pdf:before { content: ""; }
 
-.icon-word { content: ""; }
+.icon-word:before { content: ""; }
 
-.icon-excel { content: ""; }
+.icon-excel:before { content: ""; }
 
-.icon-powerpoint { content: ""; }
+.icon-powerpoint:before { content: ""; }
 
-.icon-text { content: ""; }
+.icon-text:before { content: ""; }
 
-.icon-audio { content: ""; }
+.icon-audio:before { content: ""; }
 
-.icon-podcast { content: ""; }
+.icon-podcast:before { content: ""; }
 
-.icon-globe { content: ""; }
+.icon-globe:before { content: ""; }
 
-.icon-external { content: ""; }
+.icon-external:before { content: ""; }
 
 .mobileOnly, .tabletOnly, .desktopOnly { display: none; }
 
@@ -66,6 +74,23 @@ nav ul, .columns { margin: 0; padding: 0; list-style: none; }
 .clearFix:after, .columns:after { clear: both; }
 
 [class^="icon-"]:before, [class^="icon-"]:after, [class*=" icon-"]:before, [class*=" icon-"]:after, .btn-pdf:before, .btn-word:before, a[href$=".pdf"]:before, a[href$=".PDF"]:before, a[href$=".doc"]:before, a[href$=".docx"]:before, a[href$=".DOC"]:before, a[href$=".DOCX"]:before, a[href$=".xls"]:before, a[href$=".xlsx"]:before, a[href$=".XLS"]:before, a[href$=".XLSX"]:before, a[href$=".ppt"]:before, a[href$=".pptx"]:before, a[href$=".PPT"]:before, a[href$=".PPTX"]:before, a[href$=".txt"]:before, a[href$=".TXT"]:before, a[href$=".mp3"]:before, a[href$=".MP3"]:before, a[href*="itunes"]:before, a.htmlDownload:before, a.external-link:after, #logo:before { font-family: 'icons'; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; display: inline-block; text-align: center; vertical-align: middle; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+
+[class^="icon-"]:before, [class^="icon-"]:after, [class*=" icon-"]:before, [class*=" icon-"]:after { display: block; }
+
+/*
+The `sprites` mixin generates identical output to the CSS template but can be overridden inside of SCSS
+
+@include sprites(map-get($spritesheet, 'sprites'));
+*/
+[class*=" sprite-"]:before, [class^="sprite-"]:before { content: ""; display: block; background-image: url("../images/auto-sprite/LowDef-autosprite.png"); }
+
+.sprite-excel:before { background-position: 0px -34px; width: 30px; height: 29px; }
+
+.sprite-pdf:before { background-position: 0px 0px; width: 30px; height: 30px; }
+
+.sprite-powerpoint:before { background-position: -34px -34px; width: 30px; height: 29px; }
+
+.sprite-word:before { background-position: -34px 0px; width: 30px; height: 30px; }
 
 .animate, .js-countUp + *, .js-alphaCount + * { -webkit-transition: all 0.5s ease-in-out; transition: all 0.5s ease-in-out; }
 
