--- a/assets/sass/import-maps/config-map.scss
+++ b/assets/sass/import-maps/config-map.scss
@@ -1,5 +1,6 @@
 // generated with grunt-sass-globbing
 
+@import "../00-config-files/HighDef-sprites";
 @import "../00-config-files/LowDef-sprites";
 @import "../00-config-files/break-points";
 @import "../00-config-files/colors";
