--- a/assets/css/media-merge/style-lt-ie9.css
+++ b/assets/css/media-merge/style-lt-ie9.css
@@ -14,6 +14,15 @@ SCSS variables are information about icon's compiled state, stored under its ori
 At the bottom of this section, we provide information about the spritesheet itself
 */
 
+/*
+SCSS variables are information about icon's compiled state, stored under its original file name
+
+.icon-home { width: map-get($icon-home, 'width');
+}
+
+At the bottom of this section, we provide information about the spritesheet itself
+*/
+
 @font-face {
 	font-family: 'icons';
 	src: url("fonts/icons.eot?-nx4lre");
@@ -240,27 +249,27 @@ The `sprites` mixin generates identical output to the CSS template but can be ov
 }
 
 .sprite-excel:before {
-	background-position: 0px -34px;
-	width: 30px;
-	height: 29px;
+	background-position: 0px 0px;
+	width: 15px;
+	height: 15px;
 }
 
 .sprite-pdf:before {
-	background-position: 0px 0px;
-	width: 30px;
-	height: 30px;
+	background-position: -19px 0px;
+	width: 15px;
+	height: 15px;
 }
 
 .sprite-powerpoint:before {
-	background-position: -34px -34px;
-	width: 30px;
-	height: 29px;
+	background-position: 0px -19px;
+	width: 15px;
+	height: 15px;
 }
 
 .sprite-word:before {
-	background-position: -34px 0px;
-	width: 30px;
-	height: 30px;
+	background-position: -19px -19px;
+	width: 15px;
+	height: 15px;
 }
 
 /*   SHARED ANIMATION EFFECTS   */
