Added Reg/Ex for icon css find/replace
Nothing to do with auto-spriting but I just want to save this in here
since I'm probably going to merge with master soon.

I put together a regular expression that will instantly correctly format
icomoons css output into array format witht eh help of find/replace :)

--- a/assets/sass/00-config-files/icons.scss
+++ b/assets/sass/00-config-files/icons.scss
@@ -18,6 +18,15 @@
 //	it does not style the icon
 //*================================================*/
 
+//Use this regular expression to find/replace the css icomoon generates
+//find: \.icon-([a-zA-Z-]*):before\s{\r\n\tcontent:\s("\\[a-zA-Z0-9]*");\r\n}\r\n
+//replace with: \1: \2,
+
+//expects this css format:
+//.icon-ICON_NAME {
+//	content: "\e123";
+//}
+
 
 //list of icon names and they're reference keys
 $icons: (
