--- a/assets/css/style-lt-ie9.css
+++ b/assets/css/style-lt-ie9.css
@@ -5,22 +5,6 @@
 //	This is the file that compiles the css for
 //	IE8 and below
 \*================================================*/
-/*
-SCSS variables are information about icon's compiled state, stored under its original file name
-
-.icon-home { width: map-get($icon-home, 'width');
-}
-
-At the bottom of this section, we provide information about the spritesheet itself
-*/
-/*
-SCSS variables are information about icon's compiled state, stored under its original file name
-
-.icon-home { width: map-get($icon-home, 'width');
-}
-
-At the bottom of this section, we provide information about the spritesheet itself
-*/
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 @font-face { font-family: 'icons'; src: url("fonts/icons.eot?-nx4lre"); src: url("fonts/icons.eot?#iefix-nx4lre") format("embedded-opentype"), url("fonts/icons.woff?-nx4lre") format("woff"), url("fonts/icons.ttf?-nx4lre") format("truetype"), url("fonts/icons.svg?-nx4lre#icons") format("svg"); font-weight: normal; font-style: normal; }
 /*
@@ -45,6 +29,30 @@ At the bottom of this section, we provide information about the spritesheet itse
 
 .icon-external:before { content: ""; }
 
+/*
+SCSS variables are information about icon's compiled state, stored under its original file name
+
+.icon-home { width: map-get($icon-home, 'width');
+}
+
+At the bottom of this section, we provide information about the spritesheet itself
+*/
+/*
+SCSS variables are information about icon's compiled state, stored under its original file name
+
+.icon-home { width: map-get($icon-home, 'width');
+}
+
+At the bottom of this section, we provide information about the spritesheet itself
+*/
+/*
+SCSS variables are information about icon's compiled state, stored under its original file name
+
+.icon-home { width: map-get($icon-home, 'width');
+}
+
+At the bottom of this section, we provide information about the spritesheet itself
+*/
 .mobileOnly, .tabletOnly, .desktopOnly { display: none; }
 
 .nonMobile { display: block; }
@@ -82,15 +90,24 @@ The `sprites` mixin generates identical output to the CSS template but can be ov
 
 @include sprites(map-get($spritesheet, 'sprites'));
 */
-[class*=" sprite-"]:before, [class^="sprite-"]:before { content: ""; display: block; background-image: url("../images/auto-sprite/LowDef-autosprite.png"); }
+[class*=" sprite-"]:before, [class^="sprite-"]:before { content: ""; display: inline-block; background-image: url("../images/auto-sprite/LowDef-autosprite.png"); }
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192ppi), only screen and (min-resolution: 2dppx) { [class*=" sprite-"]:before, [class^="sprite-"]:before { background-size: 32px 32px; background-image: url("../images/auto-sprite/HighDef-autosprite.png"); } }
+
+.sprite-external-link:before { background-position: -17px -17px; width: 10px; height: 11px; }
+
+.sprite-globe:before { background-position: 0px 0px; width: 15px; height: 15px; }
+
+.sprite-music:before { background-position: 0px -17px; width: 15px; height: 14px; }
+
+.sprite-podcast:before { background-position: -17px 0px; width: 15px; height: 15px; }
 
 .sprite-excel:before { background-position: 0px 0px; width: 15px; height: 15px; }
 
-.sprite-pdf:before { background-position: -19px 0px; width: 15px; height: 15px; }
+.sprite-pdf:before { background-position: -17px 0px; width: 15px; height: 15px; }
 
-.sprite-powerpoint:before { background-position: 0px -19px; width: 15px; height: 15px; }
+.sprite-powerpoint:before { background-position: 0px -17px; width: 15px; height: 15px; }
 
-.sprite-word:before { background-position: -19px -19px; width: 15px; height: 15px; }
+.sprite-word:before { background-position: -17px -17px; width: 15px; height: 15px; }
 
 /*   SHARED ANIMATION EFFECTS   */
 /*******************************************\
